--- a/MowLtipass.Main/App.xaml
+++ b/MowLtipass.Main/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:MowLtipass.Main"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Brushes.xaml"/>
+                <ResourceDictionary Source="Resources/CommonControls.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
